--- a/tiktok-app/src/components/avatar/avatar.css
+++ b/tiktok-app/src/components/avatar/avatar.css
@@ -1,3 +1,11 @@
 .avatar {
-    border-radius: 50%;
+    .avatar-circle {
+        border-radius: 50%;
+        width: 100%;
+    }
+
+    + .base_bottom {
+        display: flex;
+        align-items: flex-end;
+    }
 }
