--- a/tiktok-app/src/components/chatRoom/chatRoom.scss
+++ b/tiktok-app/src/components/chatRoom/chatRoom.scss
@@ -1,6 +1,9 @@
 .chat_room {
   .chat_input {
     max-width: 90%;
-    word-break: break-all;
+    word-break: break-word;
+  }
+  .chat_message {
+    max-width: 88%;
   }
 }
